objects/redwing__Training_Plan_Instructor__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Instructor_Name__c</fullName>
        <formula>redwing__Instructor__r.redwing__User__r.FirstName&amp;&quot; &quot;&amp;redwing__Instructor__r.redwing__User__r.LastName</formula>
        <label>Instructor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Instructor__c</fullName>
        <label>Instructor</label>
        <referenceTo>redwing__Instructor__c</referenceTo>
        <relationshipLabel>Learning Plan Instructors</relationshipLabel>
        <relationshipName>Training_Plan_Instructors</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Plan__c</fullName>
        <label>Learning Plan</label>
        <referenceTo>redwing__Training_Plan__c</referenceTo>
        <relationshipLabel>Learning Plan Instructors</relationshipLabel>
        <relationshipName>Training_Plan_Instructors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Learning Plan Instructor</label>
    <nameField>
        <displayFormat>LPI-{0000000}</displayFormat>
        <label>Learning Plan Instructor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Plan Instructors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>